@@ -1,3 +1,7 @@
+2012-10-01  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/main.c (neug_setup, USB_NEUG_GET_ERR_COUNT): New.
+
 2012-09-28  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/random.c (neug_mode_select): Rename (was: neug_select).
